# tcp-profiler

./: .dockerignore  .gitignore  CI_TESTING.md  Cargo.toml  Dockerfile  PROJECT_SUMMARY.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
docker/: Dockerfile  README.md  docker-compose.yml  run.sh
docker/traefik-config/: tls.yml
huginn-api/: Cargo.toml  README.md
huginn-api/examples/: basic_server.rs  basic_server_no_collector.rs  websocket_client.html
huginn-api/src/: error.rs  handlers.rs  lib.rs  main.rs  server.rs  state.rs  websocket.rs
huginn-collector/: Cargo.toml  README.md
huginn-collector/examples/: basic_collector.rs
huginn-collector/src/: bridge.rs  collector.rs  config.rs  error.rs  lib.rs
huginn-core/: Cargo.toml  README.md
huginn-core/examples/: basic_usage.rs
huginn-core/src/: analyzer.rs  error.rs  events.rs  lib.rs  profile.rs
scripts/: test.sh
src/: main.rs
static/: index.html
static/css/: styles.css
static/js/: api.js  app.js  ui.js  websocket.js
