[workspace]
members = [
    "huginn-core",
    "huginn-collector", 
    "huginn-api",
]
resolver = "2"

[workspace.dependencies]
huginn-net = { version = "1.4.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
axum = { version = "0.8.4", features = ["ws"] }
tower-http = { version = "0.6.6", features = ["fs", "cors", "trace"] }
clap = { version = "4.5.40", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
axum-server-dual-protocol = "0.7.0"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
arc-swap = "1.7"
futures = "0.3"
tower = "0.5"

# Legacy package (will be moved to huginn-api later)
[package]
name = "huginn-net-profiler"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
huginn-net = { workspace = true }
tower-http = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum-server-dual-protocol = "0.7.0"
