[package]
name = "huginn-api"
version = "0.1.0"
edition = "2021"
description = "Web API server for Huginn network profiler"

[dependencies]
huginn-core = { path = "../huginn-core" }
huginn-collector = { path = "../huginn-collector" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

# Para timestamps
chrono = { workspace = true }

# Para manejo de errores
thiserror = { workspace = true }

# Para estado compartido
arc-swap = { workspace = true }

# Para WebSockets (streaming de datos en tiempo real)
futures = { workspace = true }

# Para CORS
tower = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }

[[example]]
name = "basic_server"
path = "examples/basic_server.rs"

[[example]]
name = "basic_server_no_collector"
path = "examples/basic_server_no_collector.rs" 