[package]
name = "huginn-api"
version = "0.1.0"
edition = "2021"
description = "Web API server for Huginn network profiler"

[dependencies]
huginn-core = { path = "../huginn-core" }
huginn-collector = { path = "../huginn-collector" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
arc-swap = { workspace = true }
futures = { workspace = true }
tower = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
axum-test = "17.3.0"

[[example]]
name = "basic_server"
path = "examples/basic_server.rs"

[[example]]
name = "basic_server_no_collector"
path = "examples/basic_server_no_collector.rs" 