[package]
name = "huginn-collector"
version = "0.1.0"
edition = "2021"
description = "Network traffic collector for Huginn using huginn-net"

[dependencies]
huginn-core = { path = "../huginn-core" }
huginn-net = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Para manejo de errores
thiserror = "1.0"

# Para canales de comunicación
tokio-util = "0.7"

# Para configuración
clap = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true } 