[package]
name = "huginn-core"
version = "0.1.0"
edition = "2021"
description = "Core library for Huginn network traffic analysis"

[dependencies]
huginn-net = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

[dev-dependencies]
tracing-subscriber = { workspace = true } 